tests/cli/snapshots/cli__install__install_edge_cases_conflict.snap
---
source: tests/cli/install.rs
expression: content
---
EXIT_CODE: 1

STDOUT:
(empty)

STDERR:
[gherrit] [ERROR] Refusing to overwrite unmanaged hooks:
[gherrit] [ERROR]   - [REPO_PATH]/.git/hooks/pre-push
[gherrit] [ERROR]
[gherrit] [ERROR] Use --force to overwrite them.
