tests/cli/snapshots/cli__install__install_edge_cases_idempotent.snap
---
source: tests/cli/install.rs
expression: content
---
EXIT_CODE: 0

STDOUT:
(empty)

STDERR:
[gherrit] Installed pre-push
[gherrit] Installed commit-msg
[gherrit] Installed post-checkout
