tests/cli/snapshots/cli__install__install_read_only_fs.snap
---
source: tests/cli/install.rs
expression: content
---
EXIT_CODE: 1

STDOUT:
(empty)

STDERR:
[gherrit] [ERROR] Failed to write hook file: "[REPO_PATH]/.git/hooks/pre-push": Permission denied (os error 13)
